Updated Version and Dependency Info

--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "CrowdedEverlastingLocatorprogram",
-  "version": "1.0.0",
+  "name": "tic-tac-toe",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.3.1",
-    "tic-tac-nano-2": "^1.0.3"
+    "dblapi.js": "^2.4.1",
+    "discord.js": "^12.4.1",
+    "tic-tac-nano-2": "^1.0.5"
   }
 }
