--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tic-tac-toe",
-  "version": "1.4.3",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "dblapi.js": "^2.4.1",
-    "discord.js": "^12.4.1",
+    "discord.js": "^13.0.0-dev.t1627906063.6e0ea02",
     "tic-tac-nano-2": "^1.0.5"
   }
 }
