--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "tic-tac-toe",
-  "version": "2.2.3",
+  "version": "2.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "setup": "touch .env && echo \"TOKEN=bot_token\" >> .env"
+    "setup": "touch .env && echo \"TOKEN=bot_token\" >> .env && touch database.json && echo \"{}\" >> database.json"
   },
   "author": "Robert Offord",
   "license": "MIT",
   "dependencies": {
     "dblapi.js": "^2.4.1",
-    "discord.js": "^13.0.0-dev.t1627906063.6e0ea02",
+    "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "tic-tac-nano-2": "^1.0.5"
   }
