--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tic-tac-toe-bot",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "The rewrite of my Tic-Tac-Toe Discord bot made to be 100% slash commands",
   "main": "src/index.js",
   "scripts": {
@@ -20,6 +20,7 @@
     "@top-gg/sdk": "^3.1.2",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "tic-tac-nano-2": "^1.0.5"
   }
 }
